--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,99 @@ pytest==7.2.2
 tomli==2.0.1
 typing-extensions==4.5.0
 zipp==3.15.0
+
+numpy~=1.26.1
+beautifulsoup4~=4.12.2
+soupsieve~=2.5
+idna~=3.4
+defusedxml~=0.7.1
+cffi~=1.16.0
+Pillow~=10.1.0
+ipython~=8.16.1
+jupyter~=1.0.0
+pip~=23.3.1
+wheel~=0.41.3
+tornado~=6.3.3
+Jinja2~=3.1.2
+rsa~=4.9
+pyasn1~=0.5.0
+pyzmq~=25.1.1
+pexpect~=4.8.0
+setuptools~=65.5.0
+comm~=0.1.4
+traitlets~=5.12.0
+ezkl~=3.8.3
+fqdn~=1.5.1
+gast~=0.5.4
+h5py~=3.10.0
+parso~=0.8.3
+jedi~=0.19.1
+onnx~=1.15.0
+QtPy~=2.4.1
+requests~=2.31.0
+keras~=2.14.0
+ipywidgets~=8.1.1
+notebook~=7.0.6
+websocket-client~=1.6.4
+PyYAML~=6.0.1
+sniffio~=1.3.0
+arrow~=1.3.0
+python-dateutil~=2.8.2
+Babel~=2.13.1
+jsonschema~=4.19.1
+tensorflow~=2.14.0
+six~=1.16.0
+wrapt~=1.14.1
+Pygments~=2.16.1
+psutil~=5.9.6
+ipykernel~=6.26.0
+nbformat~=5.9.2
+overrides~=7.4.0
+platformdirs~=3.11.0
+mpmath~=1.3.0
+sympy~=1.12
+decorator~=5.1.1
+torch~=2.1.0
+astunparse~=1.6.3
+tensorboard~=2.14.1
+torchvision~=0.16.0
+urllib3~=2.0.7
+fsspec~=2023.10.0
+webencodings~=0.5.1
+bleach~=6.1.0
+tinycss2~=1.2.1
+cachetools~=5.3.2
+certifi~=2023.7.22
+MarkupSafe~=2.1.3
+wcwidth~=0.2.8
+debugpy~=1.8.0
+pickleshare~=0.7.5
+msgpack~=1.0.7
+Markdown~=3.5
+ptyprocess~=0.7.0
+flatbuffers~=23.5.26
+nbclient~=0.8.0
+fastjsonschema~=2.18.1
+networkx~=3.2.1
+jupyterlab~=4.0.7
+oauthlib~=3.2.2
+werkzeug~=3.0.1
+asttokens~=2.4.1
+executing~=2.0.1
+nbconvert~=7.9.2
+pandocfilters~=1.5.0
+mistune~=3.0.2
+pycparser~=2.21
+qtconsole~=5.4.4
+termcolor~=2.3.0
+terminado~=0.17.1
+referencing~=0.30.2
+webcolors~=1.13
+jsonpointer~=2.4
+isoduration~=20.11.0
+Send2Trash~=1.8.2
+anyio~=4.0.0
+json5~=0.9.14
 onnx==1.14.1
 onnxruntime==1.14.1
 numpy==1.21.6
